# quant-pattern-cli

./: CLAUDE.md  README.md  pyproject.toml
docs/: quantitative-methods.md  regime-detection.md
quant_patterns/: __init__.py  analysis.py  backtest.py  butterfly.py  cli.py  data.py  display.py  events.py  journal.py  macro_calendar.py  notify.py  options_data.py  potus.py  regime.py  scalp.py  screener.py  screener_data.py  swing.py  universe.py
quant_patterns/data/: universe_default.csv
tests/: conftest.py  test_analysis.py  test_backtest.py  test_butterfly.py  test_cli.py  test_data.py  test_display.py  test_events.py  test_journal.py  test_macro_calendar.py  test_options_data.py  test_scalp.py  test_screener.py  test_screener_data.py  test_signal_stats.py  test_swing.py  test_universe.py
