[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-pattern-cli"
version = "0.1.0"
description = "CLI tool for historical price pattern analysis around key market events"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "yfinance>=0.2.30",
    "pandas>=2.0",
    "numpy>=1.24",
    "rich>=13.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "feedparser>=6.0",
    "hmmlearn>=0.3.0",
]

[project.optional-dependencies]
ibkr = ["ib_insync>=0.9.86"]
dev = ["pytest", "ruff"]

[project.scripts]
qpat = "quant_patterns.cli:cli"

[tool.setuptools.packages.find]
include = ["quant_patterns*"]
